--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "@babylonjs/loaders": "^4.2.1"
   }
 }
