--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
         "dom",
         "es6"
     ],
-    "rootDir": "src"
+    "rootDir": "src",
+    "paths": {
+      "@/*": [
+       "./*"
+      ]
+    }
   }
 }
