--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/ProjetStatera/StateraFPS#readme",
   "devDependencies": {
-    "@babylonjs/core": "^4.2.1",
-    "@babylonjs/inspector": "^4.2.1",
+    "@babylonjs/core": "^5.0.0-rc.13",
+    "@babylonjs/inspector": "^5.0.0-rc.13",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
@@ -28,7 +28,8 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "@babylonjs/loaders": "^4.2.1",
-    "@babylonjs/viewer": "^5.0.0-beta.7.1"
+    "@babylonjs/loaders": "^5.0.0-rc.13",
+    "@babylonjs/viewer": "^5.0.0-rc.13",
+    "babylonjs": "^5.7.0"
   }
 }
