--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "typescript app.ts"
+    "start": "node index.js",
+    "postinstall": "tsc"
   },
   "repository": {
     "type": "git",
