--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Games on web 2022",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "start": "node index.js"
   },
   "repository": {
@@ -17,19 +18,18 @@
   },
   "homepage": "https://github.com/ProjetStatera/StateraFPS#readme",
   "devDependencies": {
-    "@babylonjs/core": "^5.8.2",
-    "@babylonjs/inspector": "^5.8.2",
+    "@babylonjs/core": "^5.0.0-rc.13",
+    "@babylonjs/inspector": "^5.0.0-rc.13",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1"
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "@babylonjs/loaders": "^5.8.2",
-    "@babylonjs/viewer": "^5.8.2",
-    "babylonjs": "^5.8.2",
-    "express": "^4.18.1"
+    "@babylonjs/loaders": "^5.0.0-rc.13",
+    "@babylonjs/viewer": "^5.0.0-rc.13",
+    "babylonjs": "^5.0.0"
   }
 }
