--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@babylonjs/loaders": "^5.0.0-rc.13",
     "@babylonjs/viewer": "^5.0.0-rc.13",
-    "babylonjs": "^5.0.0"
+    "babylonjs": "^5.0.0",
+    "express": "^4.18.1"
+
   }
 }
