--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Games on web 2022",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --port 8080"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,18 +17,19 @@
   },
   "homepage": "https://github.com/ProjetStatera/StateraFPS#readme",
   "devDependencies": {
-    "@babylonjs/core": "^5.0.0-rc.13",
-    "@babylonjs/inspector": "^5.0.0-rc.13",
+    "@babylonjs/core": "^5.8.2",
+    "@babylonjs/inspector": "^5.8.2",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.67.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.9.1"
   },
   "dependencies": {
-    "@babylonjs/loaders": "^5.0.0-rc.13",
-    "@babylonjs/viewer": "^5.0.0-rc.13",
-    "babylonjs": "^5.0.0"
+    "@babylonjs/loaders": "^5.8.2",
+    "@babylonjs/viewer": "^5.8.2",
+    "babylonjs": "^5.8.2",
+    "express": "^4.18.1"
   }
 }
